devops/k8s_dashboard/dashboard-all.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dp-kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: kubernetes-dashboard
  template:
    metadata:
      labels:
        k8s-app: kubernetes-dashboard
    spec:
      serviceAccountName: readonly-user  # Specify the ServiceAccount
      containers:
      - name: kubernetes-dashboard
        image: kubernetesui/dashboard:v2.7.0
        ports:
        - containerPort: 9090
          protocol: TCP
        args:
        - --namespace=kubernetes-dashboard
        - --enable-insecure-login
        - --enable-skip-login
        - --insecure-bind-address=0.0.0.0
        - --insecure-port=9090
        volumeMounts:
        - mountPath: /tmp/kubernetes-dashboard-certs
          name: kubernetes-dashboard-certs
        - mountPath: /tmp/csrf
          name: kubernetes-dashboard-csrf
        - mountPath: /tmp/key-holder
          name: kubernetes-dashboard-key-holder
      volumes:
      - name: kubernetes-dashboard-certs
        secret:
          secretName: kubernetes-dashboard-certs
      - name: kubernetes-dashboard-csrf
        secret:
          secretName: kubernetes-dashboard-csrf
      - name: kubernetes-dashboard-key-holder
        secret:
          secretName: kubernetes-dashboard-key-holder
---
apiVersion: v1
kind: Service
metadata:
  name: svc-kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  ports:
  - port: 80
    targetPort: 9090
  selector:
    k8s-app: kubernetes-dashboard
