devops/k8s_dashboard/node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  type: NodePort
  ports:
  - port: 80        # Service port inside cluster
    targetPort: 9090  # Container port
    nodePort: 30000   # External port on all nodes
  selector:
    k8s-app: kubernetes-dashboard
