devops/k8s_dashboard/service-k8s-dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  ports:
  - port: 443
    targetPort: 8443
    protocol: TCP
  selector:
    k8s-app: kubernetes-dashboard
